# src/common/dto/request/login.dto.ts
@@ -1,0 +1,19 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail, IsNotEmpty } from 'class-validator';
+
+export class LoginDto {
+  @ApiProperty({
+    description: 'User email',
+    example: 'johndoe@mail.com',
+  })
+  @IsNotEmpty({ message: 'Email cannot be empty' })
+  @IsEmail({}, { message: 'Invalid email format' })
+  email: string;
+
+  @ApiProperty({
+    description: 'User password',
+    example: 'P@ssw0rd123',
+  })
+  @IsNotEmpty()
+  password: string;
+}
