# src/common/dto/response/logout-response.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class LogoutResponseDto {
+  @ApiProperty({ example: 'User has been signed out' })
+  message: string;
+}
